force-app/main/default/objects/Session_Statistics__c/Session_Statistics__c.object-meta.xml
<CustomObject>
    <label>Session Statistics</label>
    <nameField>
        <displayFormat>SST-{000000}</displayFormat>
        <label>Session Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>