force-app/main/default/objects/Session_Statistics__c/fields/GeneratedDateTime__c.field-meta.xml
<CustomField>
    <fullName>GeneratedDateTime__c</fullName>
    <label>GeneratedDateTime</label>
    <type>DateTime</type>
</CustomField>