force-app/main/default/objects/Session_Statistics__c/fields/icon__c.field-meta.xml
<CustomField>
    <fullName>icon__c</fullName>
    <formula>IF( 
Percent_Correct__c &lt;  $CustomMetadata.LFL_Stats_Boundary__mdt.lfl_stats_boundary.Low__c, 
IMAGE(&quot;/resource/red&quot;, &quot;red&quot;),
IF( Percent_Correct__c &gt;= $CustomMetadata.LFL_Stats_Boundary__mdt.lfl_stats_boundary.High__c,
IMAGE(&quot;/resource/green&quot;, &quot;green&quot;),
IMAGE(&quot;/resource/orange&quot;, &quot;orange&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>icon</label>
    <type>Text</type>
</CustomField>