force-app/main/default/objects/Session_Statistics__c/fields/iconPortal__c.field-meta.xml
<CustomField>
    <fullName>iconPortal__c</fullName>
    <formula>IF(
Percent_Correct__c &lt; 0.50,
IMAGE(&quot;https://l4l.my.site.com/carer/file-asset/red?v=1&quot;, &quot;red&quot;),
IF( Percent_Correct__c &gt;= 0.90,
IMAGE(&quot;https://l4l.my.site.com/carer/file-asset/green?v=1&quot;, &quot;green&quot;),
IMAGE(&quot;https://l4l.my.site.com/carer/file-asset/orange?v=1&quot;, &quot;orange&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iconPortal</label>
    <type>Text</type>
</CustomField>