force-app/main/default/objects/Session_Statistics__c/fields/iconportalstr__c.field-meta.xml
<CustomField>
    <fullName>iconportalstr__c</fullName>
    <formula>IF(
Percent_Correct__c &lt;  $CustomMetadata.LFL_Stats_Boundary__mdt.lfl_stats_boundary.Low__c,
&quot;https://l4l.my.site.com/carer/file-asset/red?v=1&quot;,
IF( Percent_Correct__c &gt;=  $CustomMetadata.LFL_Stats_Boundary__mdt.lfl_stats_boundary.High__c,
&quot;https://l4l.my.site.com/carer/file-asset/green?v=1&quot;,
&quot;https://l4l.my.site.com/carer/file-asset/orange?v=1&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iconportalstr</label>
    <type>Text</type>
</CustomField>