force-app/main/default/objects/Session_Statistics__c/fields/iconstr__c.field-meta.xml
<CustomField>
    <fullName>iconstr__c</fullName>
    <formula>IF(
Percent_Correct__c &lt;  $CustomMetadata.LFL_Stats_Boundary__mdt.lfl_stats_boundary.Low__c,
&quot;/resource/red&quot;,
IF( Percent_Correct__c &gt;=  $CustomMetadata.LFL_Stats_Boundary__mdt.lfl_stats_boundary.High__c,
&quot;/resource/green&quot;,
&quot;/resource/orange&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iconstr</label>
    <type>Text</type>
</CustomField>