force-app/main/default/objects/Session_Statistics__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Objective</label>
    <referenceTo>Objective__c</referenceTo>
    <relationshipLabel>Session Statistics</relationshipLabel>
    <relationshipName>Session_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>