force-app/main/default/objects/Session_Statistics__c/fields/Objective_Name__c.field-meta.xml
<CustomField>
    <fullName>Objective_Name__c</fullName>
    <label>Objective Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>