force-app/main/default/objects/Session_Statistics__c/fields/Responded_Percent_Correct__c.field-meta.xml
<CustomField>
    <fullName>Responded_Percent_Correct__c</fullName>
    <formula
  >if ( ( TotalAcquiredCorrect__c + TotalAcquiredIncorrect__c + TotalAcquiredPrompted__c)&gt;0,
TotalAcquiredCorrect__c / ( TotalAcquiredCorrect__c + TotalAcquiredIncorrect__c + TotalAcquiredPrompted__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responded_Percent_Correct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>