force-app/main/default/objects/Session_Statistics__c/fields/SD_And_Objective_Str__c.field-meta.xml
<CustomField>
    <fullName>SD_And_Objective_Str__c</fullName>
    <formula>SD_Name__c &amp;&quot;: &quot;&amp; Objective__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SD_And_Objective_Str</label>
    <type>Text</type>
</CustomField>