force-app/main/default/objects/Session_Statistics__c/fields/SD_Name__c.field-meta.xml
<CustomField>
    <fullName>SD_Name__c</fullName>
    <formula>Objective__r.SD_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SD_Name</label>
    <type>Text</type>
</CustomField>