force-app/main/default/objects/Session_Statistics__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Session Statistics</relationshipLabel>
    <relationshipName>Session_Statistics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>