force-app/main/default/objects/Session_Statistics__c/fields/TotalAcquiredCorrect__c.field-meta.xml
<CustomField>
    <fullName>TotalAcquiredCorrect__c</fullName>
    <label>Total Acquired Correct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>