force-app/main/default/objects/Session_Statistics__c/fields/TotalAcquiredPrompted__c.field-meta.xml
<CustomField>
    <fullName>TotalAcquiredPrompted__c</fullName>
    <label>Total Acquired Prompted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>